refactor: remove deprecated @NonNull, fix raw type warnings, and replace generic RuntimeException
Remove redundant @NonNull on overridden doFilterInternal params.
Replace raw RuntimeException in AuthService with InvalidCredentialException.
Add type parameters to any() calls in AuthControllerTest.
Remove unused imports in AuthServiceTest.
Suppress unchecked warning on Specification mock in VehicleServiceTest.
Suppress unused lambda param warning in VehicleSpecification.
Replace .collect(Collectors.toList()) with .toList() in handler.

Co-authored-by: opencode <AI@users.noreply.github.com>